--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>LAYATHARANG</title>
 </head>
 <body>
-Hello, World!
+	<h1>LAYATHARANG</h1>
 </body>
 </html>
